# MonteCarlo-Numerical-Integration

./: CMakeLists.txt  README.md  main.qml
include/: Function.h  IntegrationController.h  MonteCarloIntegrator.h  PlainMonteCarlo.h  Result.h  StratifiedMonteCarlo.h
src/: IntegrationController.cpp  PlainMonteCarlo.cpp  StratifiedMonteCarlo.cpp  main.cpp
